<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linear2"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/roommate"
            android:layout_weight="1"
            android:layout_gravity="start"
            android:paddingTop="10dp"
            android:textColor="#000000"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint1"
            android:textSize="15sp"
            android:inputType="number"
            android:id="@+id/roommates"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linear3"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_below="@id/linear2">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rent"
            android:layout_weight="1"
            android:layout_gravity="start"
            android:paddingTop="10dp"
            android:textColor="#000000"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint2"
            android:textSize="15sp"
            android:inputType="numberDecimal"
            android:id="@+id/rent"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linear4"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_below="@id/linear3">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/electric"
            android:layout_weight="1"
            android:layout_gravity="start"
            android:paddingTop="10dp"
            android:textColor="#000000"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint3"
            android:inputType="numberDecimal"

            android:textSize="15sp"
            android:id="@+id/electricity"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linear5"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_below="@id/linear4">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gas"
            android:layout_weight="1"
            android:layout_gravity="start"
            android:paddingTop="10dp"
            android:textColor="#000000"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint4"
            android:textSize="15sp"
            android:inputType="numberDecimal"

            android:id="@+id/gas"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linear6"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_below="@id/linear5">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trash"
            android:layout_weight="1"
            android:layout_gravity="start"
            android:paddingTop="10dp"
            android:textColor="#000000"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint5"
            android:textSize="15sp"
            android:inputType="numberDecimal"

            android:id="@+id/trash"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linear7"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_below="@id/linear6">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/internet"
            android:layout_weight="1"
            android:layout_gravity="start"
            android:paddingTop="10dp"
            android:textColor="#000000"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint6"
            android:textSize="15sp"
            android:inputType="numberDecimal"

            android:id="@+id/internet"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linear8"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_below="@id/linear7">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other"
            android:layout_weight="1"
            android:layout_gravity="start"
            android:paddingTop="10dp"
            android:textColor="#000000"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint7"
            android:inputType="numberDecimal"

            android:textSize="15sp"
            android:id="@+id/other"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linear9"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_below="@id/linear8">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:id="@+id/coffeeButton"
        android:onClick="findUtilityInput"
        android:textSize="16sp"
        android:fontFamily="serif"
        android:textStyle="bold"
        android:textColor="#f7efef"
        android:background="#808080"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_below="@id/linear8"
        android:layout_centerHorizontal="true"
        />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linear10"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_below="@id/linear9"
        android:layout_marginTop="15dp">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/outputText"
            android:textSize="18sp"
            android:textColor="#000000"/>
    </ScrollView>
    </LinearLayout>
</RelativeLayout>




